fixed grid background alignfull left and right styles

--- a/src/gutenberg/blocks/grid/style.scss
+++ b/src/gutenberg/blocks/grid/style.scss
@@ -204,4 +204,9 @@
         right: 7.5px;
         left: 7.5px;
     }
+
+    > .nk-awb.alignfull {
+        right: 0;
+        left: 0;
+    }
 }
